// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithButton /> by default matches with snapshot 1`] = `
<div
  className="text-input-with-button__StyledTextInputWithButton-sc-1yqni7d-0 fyjlXs"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iDULaY text-input-with-button__StyledTextInput-sc-1yqni7d-1 znwdc"
    disabled={false}
    name="text"
  />
  <button
    className="text-input-with-button__StyledButton-sc-1yqni7d-2 jpFdnp"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with buttonProps prop matches with snapshot 1`] = `
<div
  className="text-input-with-button__StyledTextInputWithButton-sc-1yqni7d-0 fyjlXs"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iDULaY text-input-with-button__StyledTextInput-sc-1yqni7d-1 znwdc"
    disabled={false}
    name="text"
  />
  <button
    className="text-input-with-button__StyledButton-sc-1yqni7d-2 jpFdnp"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with disabled prop matches with snapshot 1`] = `
<div
  className="text-input-with-button__StyledTextInputWithButton-sc-1yqni7d-0 fyjlXs"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iDULaY text-input-with-button__StyledTextInput-sc-1yqni7d-1 znwdc"
    disabled={true}
    name="text"
  />
  <button
    className="text-input-with-button__StyledButton-sc-1yqni7d-2 cmzKLD"
    disabled={true}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with error prop matches with snapshot 1`] = `
<div
  className="text-input-with-button__StyledTextInputWithButton-sc-1yqni7d-0 fyjlXs"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 kfptEQ text-input-with-button__StyledTextInput-sc-1yqni7d-1 znwdc"
    disabled={false}
    name="text"
  />
  <button
    className="text-input-with-button__StyledButton-sc-1yqni7d-2 jNnytU"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with props matches with snapshot 1`] = `
<div
  className="text-input-with-button__StyledTextInputWithButton-sc-1yqni7d-0 fyjlXs"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iDULaY text-input-with-button__StyledTextInput-sc-1yqni7d-1 znwdc"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
  />
  <button
    className="text-input-with-button__StyledButton-sc-1yqni7d-2 jpFdnp"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with tiny prop matches with snapshot 1`] = `
<div
  className="text-input-with-button__StyledTextInputWithButton-sc-1yqni7d-0 fyjlXs"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iXzQrK text-input-with-button__StyledTextInput-sc-1yqni7d-1 znwdc"
    disabled={false}
    name="text"
  />
  <button
    className="text-input-with-button__StyledButton-sc-1yqni7d-2 jpFdnp"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with valid prop matches with snapshot 1`] = `
<div
  className="text-input-with-button__StyledTextInputWithButton-sc-1yqni7d-0 fyjlXs"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 bfvwuD text-input-with-button__StyledTextInput-sc-1yqni7d-1 znwdc"
    disabled={false}
    name="text"
  />
  <button
    className="text-input-with-button__StyledButton-sc-1yqni7d-2 bWqQoJ"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;
